site/css/style.css
/* ... */
@media (min-width: 980px) and (max-width: 1199px) {
  .nav-collapse_ {
    height: auto !important;
  }
}
@media (max-width: 979px) {
  .nav-collapse_ {
    height: auto !important;
  }
  .navbar_ .brand {
    float: none;
    margin-bottom: 10px;
  }
  .navbar_ .nav-collapse_ {
    height: auto !important;
    float: left;
  }
  .navbar_ .nav-collapse_ .nav {
    float: none;
    display: block;
  }
  .navbar_ .nav-collapse_ .nav > li {
    margin: 0 0 0 55px;
  }
  .navbar_ .nav-collapse_ .nav > li:first-child {
    margin-left: 0;
  }
  footer em {
    display: inline-block;
    padding: 5px 0;
  }
  .br-footer {
    display: none;
  }
  .adress span {
    width: 70px;
  }
  .div-adress strong {
    font-size: 16px;
  }
}
@media (min-width: 768px) and (max-width: 979px) {
  .soc-icons {
    position: absolute;
    right: 20px;
  }
  .form-div-1,
  .form-div-2,
  .form-div-3 {
    width: 166px;
  }
  .form-div-1,
  .form-div-2 {
    margin-right: 20px;
  }
  .block-indent .extra-wrap {
    overflow: visible;
  }
  .list-history dd {
    overflow: visible;
  }
}
@media (max-width: 767px) {
  header {
    background: linear-gradient(135deg, #0d2b1f 0%, #1a3d2b 60%, #0d2b1f 100%);
    padding-bottom: 10px;
  }
  .navbar_ .navbar-inner {
    background: linear-gradient(135deg, #0d2b1f 0%, #1a3d2b 60%, #0d2b1f 100%) !important;
  }
  .navbar_ .navbar-inner > .clearfix {
    border-bottom: 1px solid rgba(201,168,76,0.25);
  }
  .navbar_ .nav-collapse_ .nav {
    display: none;
  }
  .navbar_ .nav-collapse_ {
    height: auto !important;
    float: none;
  }
  .soc-icons {
    margin-bottom: 20px;
  }
  .select-menu {
    display: block !important;
    margin-bottom: 2px;
    width: 100%;
    border: 1px solid rgba(201,168,76,0.4);
    background: #1a3d2b;
    color: #c9a84c;
    cursor: pointer;
    font-family: 'Open Sans', sans-serif;
    letter-spacing: 1px;
    padding: 8px 12px;
    border-radius: 4px;
  }
  .select-menu option {
    padding-bottom: 3px;
  }
  .block-indent {
    margin-bottom: 40px;
  }
  .block-indent .extra-wrap {
    overflow: visible;
  }
  .list_carousel {
    margin-bottom: 20px;
  }
  .block-list {
    border-right: none;
    margin-bottom: 20px;
  }
  .list-3 {
    margin-bottom: 20px;
  }
  .logotip {
    padding-bottom: 20px;
  }
  .logotip .brand {
    margin: 30px auto;
    float: none;
    display: block;
    width: 230px;
    height: 74px;
  }
  .logotip .text-header {
    display: none;
  }
  .thumbnails .thumbnail {
    float: left;
    margin: 0 20px 20px 0;
    width: 40%;
  }
  .img-indent {
    margin-bottom: 30px;
  }
  .img-indent .img-polaroid {
    width: auto;
    float: left;
    margin: 0 20px 15px 0;
  }
  .thumbnails-1 {
    margin: 0 0 0 0;
  }
  .thumbnails-1 .thumbnail-1 {
    margin: 0 20px 13px 0;
    float: left;
    width: 28%;
  }
  .block-thumbnail-1 .extra-wrap {
    overflow: visible;
  }
  .block-thumbnail-1 .cost {
    margin: 0 0 0 10px;
  }
  .block-indent-1 .img-polaroid {
    float: none;
    margin: 0 0 20px 0;
    width: 100%;
  }
  .map iframe {
    height: 300px;
  }
  .form-div-1,
  .form-div-2,
  .form-div-3 {
    float: none;
    width: 100%;
    margin: 0 0 0 0;
  }
  .block-indent .extra-wrap {
    overflow: visible;
  }
  .br-footer {
    display: inline-block;
  }
}
@media (min-width: 626px) and (max-width: 767px) {
  
}
@media (max-width: 626px) {
  
}
@media (max-width: 530px) {
  .img-indent .img-polaroid {
    float: none;
    margin: 0 0 15px 0;
    width: 100%;
  }
  .thumbnails-1 {
    margin: 0 0 0 0;
  }
  .thumbnails-1 .thumbnail-1 {
    margin: 0 0 23px 0;
    float: none;
    width: 100%;
  }
  .thumbnails-1 .thumbnail-1 .img-polaroid {
    margin-bottom: 15px;
  }
}
@media (min-width: 482px) and (max-width: 625px) {
  
}
@media (max-width: 480px) {
  .logotip {
    padding-bottom: 10px;
  }
  .logotip .brand {
    width: 115px;
    height: 37px;
    margin: 10px auto;
  }
  .thumbnails .thumbnail {
    float: none;
    width: 100%;
    margin: 0 0 20px 0;
  }
  .map iframe {
    height: 200px;
  }
}
@media (min-width: 320px) and (max-width: 481px) {
  
}
@media (max-width: 320px) {
  .block-indent .polaroid-1 {
    float: none;
    width: 100%;
    display: block;
    margin: 0 0 20px 0;
  }
  .block-testimonials .img-polaroid {
    float: none;
    width: 100%;
    margin: 0 0 20px 0;
  }
  .list-history li span {
    overflow: visible;
  }
}
/*Core variables and mixins*/
.clearfix {
  *zoom: 1;
}
.clearfix:before,
.clearfix:after {
  display: table;
  content: "";
  line-height: 0;
}
.clearfix:after {
  clear: both;
}
.hide-text {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}
.input-block-level {
  display: block;
  width: 100%;
  min-height: 28px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

